<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeamOS</string>
    <string name="welcome_title">Bem-vindo ao TeamOS 3.0</string>
    <string name="welcome_subtitle">Um sistema operacional mobile open source.\nVamos configurar seu dispositivo.</string>
    <string name="btn_continue">Seguir</string>
    <string name="btn_skip">Pular</string>
    <string name="language_title">Selecione o idioma</string>
    <string name="language_subtitle">Escolha o idioma do sistema</string>
    <string name="wifi_title">Conectar à rede</string>
    <string name="wifi_subtitle">Selecione uma rede Wi-Fi para continuar</string>
    <string name="gallery">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="store">Loja</string>
    <string name="settings">Ajustes</string>
    <string name="browser">Navegador</string>
    <string name="files">Arquivos</string>
    <string name="phone">Telefone</string>
    <string name="messages">Mensagens</string>
    <string name="qs_wifi">Wi-Fi</string>
    <string name="qs_data">Dados</string>
    <string name="qs_bluetooth">Bluetooth</string>
    <string name="qs_airplane">Avião</string>
    <string name="qs_flashlight">Lanterna</string>
    <string name="qs_dnd">Não perturbar</string>
    <string name="qs_location">Localização</string>
    <string name="qs_rotation">Rotação</string>
    <string name="qs_brightness">Brilho</string>
</resources>
